tests/errors/invoke-max-trig-too-often.fil
extern "dummy.sv" {
  component Mult<G>(
    @interface[G, G+5] go_G: 1,
  ) -> ();
}

component Main<T, L>(
  @interface[T, T+6] go_T: 1,
  @interface[L, L+3] go_L: 1
) -> () {
  M := new Mult;
  m0 := invoke M<max(T+1, L+4)>;
}
