tests/errors/invoke-max-trig-too-often.expect
---STDERR---
error: Cannot prove constraint |L - L+3| > |max(T+1, L+4) - max(T+6, L+9)|
   ┌─ tests/errors/invoke-max-trig-too-often.fil:12:3
   │
 3 │     @interface[G, G+5] go_G: 1,
   │     -------------------------- Interface requires event to trigger once in |max(T+1, L+4) - max(T+6, L+9)| cycles
   ·
 9 │   @interface[L, L+3] go_L: 1
   │   -------------------------- Provided event may trigger every |L - L+3| cycles
   ·
12 │   m0 := invoke M<max(T+1, L+4)>;
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Event provided to invoke pulses more often than @interface allows

